mType/tests/testFiles/import/pass/reexportChain/ModD.mt
public class ChainBase {
    public function hello(): string {
        return "hello-from-D";
    }
}
