mType/tests/testFiles/import/error/transitiveBroken/Wrapper.mt
import { Y } from "./Bad.mt";

public class Wrapper {
    public function tag(): string {
        return "ok";
    }
}
